--- a/latex/book-of-abstracts.latex
+++ b/latex/book-of-abstracts.latex
@@ -41,7 +41,8 @@
 
 \hypersetup{hidelinks}
 
-
+%% Based on LianTze Lim's template
+%% https://www.overleaf.com/latex/examples/a-basic-conference-abstract-booklet/tkjfcvzgjrnd
 \newenvironment{conf-abstract}[5][]{
   \needspace{10\baselineskip}
   \begin{center}
@@ -121,6 +122,7 @@
   Nazyheli
   Henrique
   André
+  Cummings
 }
 
 \begin{document}
