--- a/templates/conf-abstract.latex
+++ b/templates/conf-abstract.latex
@@ -3,6 +3,7 @@
   {$first_name$ $last_name$}
   {$institution$}
   {$if(email)$$email$$endif$}
+  {$if(url)$$url$$endif$}
 \indexauthors{$if(index_name)$$index_name$@$endif$$last_name${,} $first_name$}
 $body$
 $if(biblio)$
