corrige problema com links de emails

--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -56,7 +56,7 @@
     \smallskip
     {#4\par}
     \smallskip
-    {\small \href{#5}{#5}\par}
+    {\small \href{mailto:#5}{#5}\par}
   \end{center}
 }{%
   \bigskip
