atualizações do programa

--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -161,7 +161,7 @@ Last Revised: \today
     Celso Vieira \\
     Gustavo Laet Gomes \\
     Henrique Buldrini \\
-    Liliana Carolina Sanchez Castro \\
+    Liliana Carolina Sánchez Castro \\
     Luís Márcio Nogueira Fontes \\
     Marcos Damásio \\
     Martim Silva \\
