--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -160,6 +160,31 @@ Last Revised: \today
 
 \input{abstracts}
 
+\chapter{New Books}
+
+\section{First Section (Tuesday, July 2, 11h15-12h, Auditorium 104)}
+\begin{itemize}
+  \item Arnaud Macé, \emph{Les Éléates. Fragments des œuvres de Parménide, Zénon et Mélissos}.
+Traduits et présentés par Luc Brisson, Arnaud Macé et Jean-François Pradeau.
+Coll. Fragments. Paris: Les Belles Lettres, 2022.
+  \item Arnaud Macé, \emph{Philosophy of Science Information System}: a participatory platform developed by the CDBP (Centre de Documentation et de Bibliographie Philosophiques) 
+of the University of Franche-Comté 
+  \item Bruno L Conte, \emph{A Doxa no poema de Pârmênides}.
+Uma investigação a partir dos testemunhos antigos.
+São Paulo: Loyola, 2023.
+  \item Richard McKirahan, Forthcoming: \emph{The Sophists}.
+Serie "Ancient Philosophies". Routledge, 2024.
+\end{itemize}
+
+\section{Second Section (Thursday, July 4, 11h15-12h, Auditorium 104)}
+\begin{itemize}
+  \item Livio Rossetti, \emph{Ripensare i Presocratici. Da Talete (anzi da Omero) à Zenone}. 
+Coll. "Filosofie". Sesto San Giovanni: Mimesis, 2023.
+  \item Nicholas Molinari, \emph{Acheloios, Thales, and the Origin of Philosophy: A response to the Neo Marxians}. Archaeopress, 2022.
+  \item Celso Vieira (org.). Forthcoming: \emph{Dossier: "Style Matters in Presocratic Philosophy"}, Revista Archai, 2024.
+  \item Alexandre Costa; Miriam Peixoto; Bruno Conte (orgs.). \emph{Estudos pré-socráticos na América Latina}. São Paulo: Odysseus, 2024
+\end{itemize}
+
 \chapter{Organizing Committee}
 
 \begin{center}
