corrige section->session

--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -162,7 +162,7 @@ Last Revised: \today
 
 \chapter{New Books}
 
-\section{First Section (Tuesday, July 2, 11h15-12h, Auditorium 104)}
+\section{First Session (Tuesday, July 2, 11h15-12h, Auditorium 104)}
 \begin{itemize}
   \item Arnaud Macé, \emph{Les Éléates. Fragments des œuvres de Parménide, Zénon et Mélissos}.
 Traduits et présentés par Luc Brisson, Arnaud Macé et Jean-François Pradeau.
@@ -176,7 +176,7 @@ São Paulo: Loyola, 2023.
 Serie "Ancient Philosophies". Routledge, 2024.
 \end{itemize}
 
-\section{Second Section (Thursday, July 4, 11h15-12h, Auditorium 104)}
+\section{Second Session (Thursday, July 4, 11h15-12h, Auditorium 104)}
 \begin{itemize}
   \item Livio Rossetti, \emph{Ripensare i Presocratici. Da Talete (anzi da Omero) à Zenone}. 
 Coll. "Filosofie". Sesto San Giovanni: Mimesis, 2023.
