indexação de nomes de autores de livros

--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -166,23 +166,23 @@ Last Revised: \today
 \begin{itemize}
   \item Arnaud Macé, \emph{Les Éléates. Fragments des œuvres de Parménide, Zénon et Mélissos}.
 Traduits et présentés par Luc Brisson, Arnaud Macé et Jean-François Pradeau.
-Coll. Fragments. Paris: Les Belles Lettres, 2022.
+Coll. Fragments. Paris: Les Belles Lettres, 2022.\indexauthors{Macé{,} Arnaud}
   \item Arnaud Macé, \emph{Philosophy of Science Information System}: a participatory platform developed by the CDBP (Centre de Documentation et de Bibliographie Philosophiques) 
-of the University of Franche-Comté 
-  \item Bruno L Conte, \emph{A Doxa no poema de Pârmênides}.
+    of the University of Franche-Comté\indexauthors{Macé{,} Arnaud}
+  \item Bruno L Conte, \emph{A Doxa no poema de Pârmênides}.\indexauthors{Conte{,} Bruno Loureiro}
 Uma investigação a partir dos testemunhos antigos.
 São Paulo: Loyola, 2023.
   \item Richard McKirahan, Forthcoming: \emph{The Sophists}.
-Serie "Ancient Philosophies". Routledge, 2024.
+    Serie "Ancient Philosophies". Routledge, 2024.\indexauthors{McKirahan{,} Richard}
 \end{itemize}
 
 \section{Second Session (Thursday, July 4, 11h15-12h, Auditorium 104)}
 \begin{itemize}
   \item Livio Rossetti, \emph{Ripensare i Presocratici. Da Talete (anzi da Omero) à Zenone}. 
-Coll. "Filosofie". Sesto San Giovanni: Mimesis, 2023.
-  \item Nicholas Molinari, \emph{Acheloios, Thales, and the Origin of Philosophy: A response to the Neo Marxians}. Archaeopress, 2022.
-  \item Celso Vieira (org.). Forthcoming: \emph{Dossier: "Style Matters in Presocratic Philosophy"}, Revista Archai, 2024.
-  \item Alexandre Costa; Miriam Peixoto; Bruno Conte (orgs.). \emph{Estudos pré-socráticos na América Latina}. São Paulo: Odysseus, 2024
+    Coll. "Filosofie". Sesto San Giovanni: Mimesis, 2023.\indexauthors{Rossetti{,} Livio}
+  \item Nicholas Molinari, \emph{Acheloios, Thales, and the Origin of Philosophy: A response to the Neo Marxians}. Archaeopress, 2022.\indexauthors{Molinari{,} Nicholas J.}
+  \item Celso Vieira (org.). Forthcoming: \emph{Dossier: "Style Matters in Presocratic Philosophy"}, Revista Archai, 2024.\indexauthors{Vieira{,} Celso}
+  \item Alexandre Costa; Miriam Peixoto; Bruno Conte; Carolina Sánchez (orgs.). \emph{Estudos pré-socráticos na América Latina}. São Paulo: Odysseus, 2024\indexauthors{Costa{,} Alexandre}\indexauthors{Peixoto{,} Miriam Campolina Diniz}\indexauthors{Sánchez Castro{,} Liliana Carolina}\indexauthors{Conte{,} Bruno Loureiro}
 \end{itemize}
 
 \chapter{Organizing Committee}
