--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -51,6 +51,12 @@
     \href{#2}{\includegraphics[height=1em,clip]{../images/document_icon.png}}%
   }{}}
 
+% Image credits
+% Basic Outline created by Rahul Kaklotar
+% https://www.flaticon.com/authors/rahul-kaklotar/basic-outline
+\newcommand{\printExternalLinkIcon}[1]{%
+  \href{#1}{\hbox{\includegraphics[height=0.8em,clip]{../images/external_link.png}}}}
+
 %% Based on LianTze Lim's template
 %% https://www.overleaf.com/latex/examples/a-basic-conference-abstract-booklet/tkjfcvzgjrnd
 \newenvironment{conf-abstract}[7][]{
@@ -164,25 +170,31 @@ Last Revised: \today
 
 \section{First Session (Tuesday, July 2, 11h15-12h, Auditorium 104)}
 \begin{itemize}
-  \item Arnaud Macé, \emph{Les Éléates. Fragments des œuvres de Parménide, Zénon et Mélissos}.
-Traduits et présentés par Luc Brisson, Arnaud Macé et Jean-François Pradeau.
-Coll. Fragments. Paris: Les Belles Lettres, 2022.\indexauthors{Macé{,} Arnaud}
-  \item Arnaud Macé, \emph{Philosophy of Science Information System}: a participatory platform developed by the CDBP (Centre de Documentation et de Bibliographie Philosophiques) 
-    of the University of Franche-Comté\indexauthors{Macé{,} Arnaud}
-  \item Bruno L Conte, \emph{A Doxa no poema de Pârmênides}.\indexauthors{Conte{,} Bruno Loureiro}
-Uma investigação a partir dos testemunhos antigos.
-São Paulo: Loyola, 2023.
+  \item Arnaud Macé, \emph{Les Éléates. Fragments des œuvres de Parménide, Zénon et Mélissos}. Traduits et présentés par Luc Brisson, Arnaud Macé et Jean-François Pradeau. Coll. Fragments. Paris: Les Belles Lettres, 2022.%
+    \printExternalLinkIcon{https://www.lesbelleslettres.com/livre/9782251452586/les-eleates}%
+    \indexauthors{Macé{,} Arnaud}
+  \item Arnaud Macé, \emph{Philosophy of Science Information System}: a participatory platform developed by the CDBP (Centre de Documentation et de Bibliographie Philosophiques) of the University of Franche-Comté.%
+    \printExternalLinkIcon{https://sips.univ-fcomte.fr/}%
+    \indexauthors{Macé{,} Arnaud}
+  \item Bruno L. Conte, \emph{A Doxa no poema de Pârmênides}. Uma investigação a partir dos testemunhos antigos.
+São Paulo: Loyola, 2023.%
+    \printExternalLinkIcon{https://www.loyola.com.br/produto/a-doxa-no-poema-de-parmenides-uma-investigacao-a-partir-dos-testemunhos-antigos-5514}%
+     \indexauthors{Conte{,} Bruno Loureiro}
   \item Richard McKirahan, Forthcoming: \emph{The Sophists}.
-    Serie "Ancient Philosophies". Routledge, 2024.\indexauthors{McKirahan{,} Richard}
+    Ancient Philosophies Series. Routledge, 2024.\indexauthors{McKirahan{,} Richard}
 \end{itemize}
 
 \section{Second Session (Thursday, July 4, 11h15-12h, Auditorium 104)}
 \begin{itemize}
-  \item Livio Rossetti, \emph{Ripensare i Presocratici. Da Talete (anzi da Omero) à Zenone}. 
-    Coll. "Filosofie". Sesto San Giovanni: Mimesis, 2023.\indexauthors{Rossetti{,} Livio}
-  \item Nicholas Molinari, \emph{Acheloios, Thales, and the Origin of Philosophy: A response to the Neo Marxians}. Archaeopress, 2022.\indexauthors{Molinari{,} Nicholas J.}
+  \item Livio Rossetti, \emph{Ripensare i Presocratici. Da Talete (anzi da Omero) à Zenone}.
+    Coll. Filosofie. Sesto San Giovanni: Mimesis, 2023.%
+    \printExternalLinkIcon{https://www.mimesisedizioni.it/libro/9788857598888}%
+    \indexauthors{Rossetti{,} Livio}
+  \item Nicholas Molinari, \emph{Acheloios, Thales, and the Origin of Philosophy: A response to the Neo Marxians}. Archaeopress, 2022.%
+    \printExternalLinkIcon{https://www.archaeopress.com/Archaeopress/Products/9781803270869}%
+    \indexauthors{Molinari{,} Nicholas J.}
   \item Celso Vieira (org.). Forthcoming: \emph{Dossier: "Style Matters in Presocratic Philosophy"}, Revista Archai, 2024.\indexauthors{Vieira{,} Celso}
-  \item Alexandre Costa; Miriam Peixoto; Bruno Conte; Carolina Sánchez (orgs.). \emph{Estudos pré-socráticos na América Latina}. São Paulo: Odysseus, 2024\indexauthors{Costa{,} Alexandre}\indexauthors{Peixoto{,} Miriam Campolina Diniz}\indexauthors{Sánchez Castro{,} Liliana Carolina}\indexauthors{Conte{,} Bruno Loureiro}
+  \item Alexandre Costa; Miriam Peixoto; Bruno Conte; Carolina Sánchez (orgs.). \emph{Estudos pré-socráticos na América Latina}. São Paulo: Odysseus, 2024.\printExternalLinkIcon{https://www.amazon.com/Estudos-pr\%C3\%A9-socr\%C3\%A1ticos-Am\%C3\%A9rica-Latina-Portuguese-ebook/dp/B0D8L55BPM}\indexauthors{Costa{,} Alexandre}\indexauthors{Peixoto{,} Miriam Campolina Diniz}\indexauthors{Sánchez Castro{,} Liliana Carolina}\indexauthors{Conte{,} Bruno Loureiro}
 \end{itemize}
 
 \chapter{Organizing Committee}
