correção de texto

--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -176,7 +176,7 @@ Last Revised: \today
   \item Arnaud Macé, \emph{Philosophy of Science Information System}: a participatory platform developed by the CDBP (Centre de Documentation et de Bibliographie Philosophiques) of the University of Franche-Comté.%
     \printExternalLinkIcon{https://sips.univ-fcomte.fr/}%
     \indexauthors{Macé{,} Arnaud}
-  \item Bruno L. Conte, \emph{A Doxa no poema de Pârmênides}. Uma investigação a partir dos testemunhos antigos.
+  \item Bruno L. Conte, \emph{A Doxa no poema de Parmênides}. Uma investigação a partir dos testemunhos antigos.
 São Paulo: Loyola, 2023.%
     \printExternalLinkIcon{https://www.loyola.com.br/produto/a-doxa-no-poema-de-parmenides-uma-investigacao-a-partir-dos-testemunhos-antigos-5514}%
      \indexauthors{Conte{,} Bruno Loureiro}
