--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -107,7 +107,7 @@
 \usepackage{titlepic}
 
 \title{Book of Abstracts}
-\author{The Language of Being, the Language of Nature: parmenides and His Receptions}
+\author{The Language of Being, the Language of Nature: Parmenides and His Receptions}
 
 \titlepic{\includegraphics[width=0.8\textwidth]{../images/parmenides_capa.jpg}}
 
@@ -127,6 +127,9 @@
   Henrique
   André
   Cummings
+  Alexandre
+  Fernandes
+  Victoria
 }
 
 \begin{document}
