adiciona instituições dos organizadores

--- a/templates/book-of-abstracts.latex
+++ b/templates/book-of-abstracts.latex
@@ -198,9 +198,9 @@ Last Revised: \today
 
 \begin{center}
   \begin{tabular}{l}
-    Mathilde Brémond \\
-    Liliana Carolina Sánchez Castro \\
-    Bruno Loureiro Conte
+    Mathilde Brémond (Université Clermont Auvergne) \\
+    Liliana Carolina Sánchez Castro (Universidad Nacional de Colombia) \\
+    Bruno Loureiro Conte (Pontifícia Universidade Católica de São Paulo)
   \end{tabular}
 \end{center}
 
